--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 bind C-l send-prefix
 bind _ command-prompt "setw monitor-silence '%%'"
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-24bits"
 set -s escape-time 0
 set -g focus-events on
 set -g base-index 1
